--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Application</title>
+    <title>Chatify</title>
     <link rel="stylesheet" href="style.css">
     <script src="/socket.io/socket.io.js"></script>
 </head>
@@ -12,7 +12,7 @@
     <div class="container" id="authContainer">
         <!-- Login Form -->
         <div id="loginForm">
-            <h1>💬 Welcome Back</h1>
+            <h1>💬 Welcome Back! Please Sign In</h1>
             <form id="loginFormElement">
                 <div class="form-group">
                     <label for="loginUsername">Username</label>
@@ -31,7 +31,7 @@
 
         <!-- Register Form -->
         <div id="registerForm" class="hidden">
-            <h1>🚀 Create Account</h1>
+            <h1>🚀 Sign Up</h1>
             <form id="registerFormElement">
                 <div class="form-group">
                     <label for="registerUsername">Username</label>
