--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     <div class="chat-container hidden" id="chatContainer">
         <!-- Header with logout -->
         <div class="chat-header">
-            <h1>💬 Chat Application</h1>
+            <h1>💬 Chatify</h1>
             <div class="user-info">
                 <span class="username-display" id="currentUsername">Welcome!</span>
                 <button class="logout-btn" id="logoutBtn">
